<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/location_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"/>

        <TextView
            android:id="@+id/location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/location_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_hours"
            android:textSize="24sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/location_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_address"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</ScrollView>
